# craftium

./: .gitignore  .gitmodules  .readthedocs.yaml  Dockerfile.craftium  build_craftium.sh  build_sdl2.sh  build_standalone.sh  cleanrl_ppo_lstm_train.py  cleanrl_ppo_train.py  craftium-readme.md  llava_agent.py  marl_self_play.py  mkdocs.yml  mt_server.c  performance_test.py  ppo_train.py  ppo_train_crl.py  procedural_envs_example.py  pyproject.toml  ray_train.py  requirements.txt  setup.py  test.py  train_agent.py  wrapper.py
.github/: README.md
craftium/: __init__.py  craftium_env.py  env.py  minetest.py  mt_channel.py  mt_client.py  multiagent_env.py  pettingzoo_env.py  wrappers.py
craftium-docs/: creating-envs.md  dev-guide.md  environments.md  getting-started.md  index.md  installation.md  lua_env_cookbook.md  lua_functions.md  mkdocs.yml  obs-and-acts.md  reference.md  troubleshooting.md
craftium-docs/docs/: creating-envs.md  environments.md  getting-started.md  index.md  installation.md  lua_functions.md  obs-and-acts.md  reference.md  troubleshooting.md  wrappers.md
craftium-envs/chop-tree/mods/craftium_env/: init.lua  mod.conf
craftium-envs/chop-tree/mods/craftium_mod/: init.lua
craftium-envs/chop-tree/worlds/world/: players.sqlite  world.mt
craftium-envs/chop-tree_info/mods/craftium_mod/: init.lua  mod.conf
craftium-envs/chop-tree_info/worlds/world/: auth.sqlite  env_meta.txt  map_meta.txt  mod_storage.sqlite  world.mt
craftium-envs/common_games/: common_games.txt
craftium-envs/common_mods/voxel_api/: api.lua  init.lua  mod.conf
craftium-envs/multi-agent-combat/clientmods/: mods.conf
craftium-envs/multi-agent-combat/clientmods/craftium_env/: init.lua  mod.conf
craftium-envs/multi-agent-combat/clientmods/craftium_mod/: init.lua  mod.conf
craftium-envs/multi-agent-combat/mods/craftium_env/: init.lua
craftium-envs/multi-agent-combat/worlds/world/: world.mt
craftium-envs/procgen-dungeons/mods/: mobs_monster
craftium-envs/procgen-dungeons/mods/craftium_env/: init.lua  mod.conf
craftium-envs/procgen-dungeons/mods/craftium_mod/: init.lua  mod.conf
craftium-envs/procgen-dungeons/worlds/world/: auth.sqlite  env_meta.txt  map.sqlite  map_meta.txt  world.mt
craftium-envs/room/games/minetest_game/: game.conf
craftium-envs/room/mods/: voxel_api
craftium-envs/room/mods/craftium_env/: init.lua  mod.conf
craftium-envs/room/mods/craftium_mod/: init.lua
craftium-envs/room/mods/superflat/: LICENSE  README.md  depends.txt  description.txt  init.lua  parameter.lua  parsetext.lua
craftium-envs/room/worlds/world/: auth.sqlite  env_meta.txt  map.sqlite  map_meta.txt  world.mt
craftium-envs/small-room/mods/craftium_env/: init.lua
craftium-envs/small-room/mods/superflat/: README.txt  decoration.lua  mod.conf
craftium-envs/small-room/worlds/world/: map.sqlite  mod_storage.sqlite  superflat.txt  world.mt
craftium-envs/small-room_info/mods/craftium_env/: init.lua  mod.conf
craftium-envs/small-room_info/worlds/world/: auth.sqlite  env_meta.txt  map_meta.txt
craftium-envs/speleo/games/: minetest_game
craftium-envs/speleo/mods/craftium_env/: init.lua  (+1 more)
craftium-envs/spiders-attack/mods/: mobs  superflat
craftium-envs/voxel-libre2/games/: VoxeLibre
craftium-examples/: sb3_train.py
craftium/extra/: __init__.py  crl_dungeons.py  random_map_generator.py  sequence0_25
src/: defaultsettings.cpp  server.cpp
src/client/: client.cpp  client.h  clientlauncher.cpp  craftium.h  game.cpp  inputhandler.cpp  inputhandler.h  sync.h
src/gui/: mainmenumanager.h
src/script/: scripting_client.cpp  scripting_server.cpp
(+29 files in other folders)
