[build-system]
build-backend = "setuptools.build_meta"
requires = ["numpy==2.0.1", "setuptools==66.1.1", "pybind11==2.13.1"]

[project]
name = "craftium"
version = "0.0.1"
description = "A Gymnasium wrapper for the minetest game engine"
readme = "craftium-readme.md"
license = {file = "LICENSE.txt"}
keywords = ["gymnasium", "minetest", "minecraft", "reinforcement learning"]

dependencies = [
    "gymnasium==0.29.1",
    "PyYAML==6.0.1",
]

[project.optional-dependencies]
# Packages needed to run the Deep RL examples
examples = ["stable_baselines3==2.3.2", "torch==2.1.0", "tyro==0.8.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["craftium"]
