[build-system]
build-backend = "setuptools.build_meta"
requires = ["numpy>=2.0.1", "setuptools>=66.1.1", "pybind11==2.13.1"]

[project]
name = "craftium"
version = "0.0.1"
description = "A Gymnasium wrapper for the minetest game engine"
readme = "craftium-readme.md"
license = { file = "LICENSE.txt" }
keywords = [
    "gymnasium",
    "luanti",
    "minetest",
    "minecraft",
    "reinforcement learning",
    "agent",
    "machine learning",
    "artificial intelligence",
]
requires-python = ">=3.11"
 
dependencies = [
    "gymnasium==0.29.1",
    "pygame>=2.6.1",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
# Packages needed to run the Deep RL examples
examples = ["stable_baselines3>=2.3.2", "torch>=2.6.0", "tyro>=0.8.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["craftium"]

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_28"
before-all = """
yum install -y wget kernel-devel libcurl-devel openal-soft-devel libpng-devel libjpeg-devel libvorbis-devel libogg-devel freetype-devel mesa-libGL-devel zlib-devel jsoncpp-devel gmp-devel sqlite-devel luajit-devel leveldb-devel ncurses-devel spatialindex-devel libzstd-devel gettext SDL2-devel python3-devel && \
bash build_sdl.sh && \
bash build_craftium.sh
"""
